@@ -10,6 +10,9 @@ Release 0.20.2 - Unreleased
     HADOOP-6498. IPC client bug may cause rpc call hang. (Ruyue Ma and hairong
     via hairong)
 
+    HDFS-927. DFSInputStream retries too many times for new block locations
+    (Todd Lipcon via Stack)
+
 Release 0.20.1 - 2009-09-01
 
   INCOMPATIBLE CHANGES
